Version 1.3.4
- Added builtin MrCrayfish's Gun Mod Compat
- Added Armor not rendering when broken
- Added Projectile Damage Multiplier Config Option

- Updated min forge version to 40.1.54

- Fixed issue where broken items could still be leveled
- Fixed issue where breaking/attacking or something similar makes the item not stackable with other items of the same id
- Fixed issue where using bone meal on a flower crashes the game
- Fixed issue where Bows and Crossbows did too much damage
- Fixed issue where breaking items would post a debug message in chat (again, yeah idk how)
- Fixed issue where Parry This!'s Spears would be duped on throw (Potentially fixes similar issues

- Removed old Gun Fallback System

Version 1.3.4
- Fixed issue where blocks and other items became broken (again)

Version 1.3.3
- Fixed Crash with Better Combat

Version 1.3.2
- Added Ukrainian Translation by sosad
- Fixed Critical Issue with the game and launcher crashing at launch


Version 1.3.1
- Updated Russian Translation
- Updated Chinese Translation

- Fixed issue where blocks and other items became broken
- Fixed issue, where breaking items would post a debug message in chat

Version 1.3
- Added config projectile_items option to add Projectile Weapons separately
- Added builtin support for Tetra mod
- Added builtin support for Tinker's Construct mod
- Added items not vanishing when broken mechanic
- Added Config option to toggle item vanishing feature
- Added Critical Damage XP for Melee Weapons and Armor
- Added Config options to tweak crit xp and percentage
- Added "weaponleveling.tooltip.broken" translation for en_us and de_de

- Changed config option added_items to melee_items

- Removed no_melee option for the config

- Fixed custom bosses not working

Version 1.2.3
- Added Chinese Translation (zh_cn) by Kzeroko (Was not in the last update by mistake)
- Added Russian Translation (ru_ru) by The_Same_Cat