@@ -1,3 +1,0 @@
-{
-  "isMeleeWeapon": true
-}
